# vegfr2-docking-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILLS.md  config.yaml  pipeline.py  pyproject.toml
data/ligands/: ligands.csv
notebooks/: results_exploration.ipynb
pipeline/: __init__.py  analyse_results.py  define_binding_site.py  prepare_ligands.py  prepare_receptor.py  run_docking.py
tests/: test_binding_site.py  test_ligand_prep.py  test_receptor_prep.py
wheels/: vina-1.2.7-cp310-cp310-macosx_11_0_arm64.whl
